--- a/index.html
+++ b/index.html
@@ -14,98 +14,98 @@
     <div class="input-group mb-3">
         <span class="input-group-text">1</span>
         <audio controls autoplay>
-            <source src="1.mp3" type="audio/mpeg">
+            <source src="music/1.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">2</span>
         <audio controls autoplay>
-            <source src="3.mp3" type="audio/mpeg">
+            <source src="music/3.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">3</span>
         <audio controls autoplay>
-            <source src="4.mp3" type="audio/mpeg">
+            <source src="music/4.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">4</span>
         <audio controls autoplay>
-            <source src="5.mp3" type="audio/mpeg">
+            <source src="music/5.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">5</span>
         <audio controls autoplay>
-            <source src="6.mp3" type="audio/mpeg">
+            <source src="music/6.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">6</span>
         <audio controls autoplay>
-            <source src="7.mp3" type="audio/mpeg">
+            <source src="music/7.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">7</span>
         <audio controls autoplay>
-            <source src="8.mp3" type="audio/mpeg">
+            <source src="music/8.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">8</span>
         <audio controls autoplay>
-            <source src="9.mp3" type="audio/mpeg">
+            <source src="music/9.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">9</span>
         <audio controls autoplay>
-            <source src="10.mp3" type="audio/mpeg">
+            <source src="music/10.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">10</span>
         <audio controls autoplay>
-            <source src="11.mp3" type="audio/mpeg">
+            <source src="music/11.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">11</span>
         <audio controls autoplay>
-            <source src="12.mp3" type="audio/mpeg">
+            <source src="music/12.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">12</span>
         <audio controls autoplay>
-            <source src="13.mp3" type="audio/mpeg">
+            <source src="music/13.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">13</span>
         <audio controls autoplay>
-            <source src="14.mp3" type="audio/mpeg">
+            <source src="music/14.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
     <div class="input-group mb-3">
         <span class="input-group-text">14</span>
         <audio controls autoplay>
-            <source src="15.mp3" type="audio/mpeg">
+            <source src="music/15.mp3" type="audio/mpeg">
         </audio>
         <input type="text" class="form-control" placeholder="Song Name">
     </div>
